@@ -246,51 +246,3 @@ Description: icon theme caching utility
  of system call and disk seek overhead when the application starts. Since the
  format of the cache files allows them to be mmap()ed shared between multiple
  applications, the overall memory consumption is reduced as well.
-
-Package: libgail-4-0
-Architecture: any
-Multi-Arch: same
-Depends: ${misc:Depends},
-         ${shlibs:Depends},
-         libgtk-4-0 (= ${binary:Version}),
-         at-spi2-core
-Pre-Depends: ${misc:Pre-Depends}
-Description: GNOME Accessibility Implementation Library -- shared libraries
- Gail implements ATK interfaces for GTK+ widgets which are dynamically
- loadable at runtime by a GTK+ application. Once loaded, those parts of
- an application that use standard GTK+ widgets will have a basic level
- of accessibility, without the need to modify the application at all.
- .
- This package contains the shared library.
-
-Package: libgail-4-dev
-Architecture: any
-Multi-Arch: same
-Section: libdevel
-Depends: ${misc:Depends},
-         libgail-4-0 (= ${binary:Version}),
-         libgtk-4-dev (= ${binary:Version}),
-         pkg-config,
-         libatk1.0-dev
-Suggests: libgail-4-doc
-Description: GNOME Accessibility Implementation Library -- development files
- Gail implements ATK interfaces for GTK+ widgets which are dynamically
- loadable at runtime by a GTK+ application. Once loaded, those parts of
- an application that use standard GTK+ widgets will have a basic level
- of accessibility, without the need to modify the application at all.
- .
- This package contains the development files for Gail.
-
-Package: libgail-4-doc
-Architecture: all
-Multi-Arch: foreign
-Section: doc
-Depends: ${misc:Depends}
-Suggests: devhelp
-Description: documentation files of the Gail library
- Gail implements ATK interfaces for GTK+ widgets which are dynamically
- loadable at runtime by a GTK+ application. Once loaded, those parts of
- an application that use standard GTK+ widgets will have a basic level
- of accessibility, without the need to modify the application at all.
- .
- This package contains the documentation files for Gail.
