@@ -1,14 +1,0 @@
-libgailutil-4.so.0 libgail-4-0 #MINVER#
- gail_misc_add_attribute@Base 3.0.0
- gail_misc_buffer_get_run_attributes@Base 3.0.0
- gail_misc_get_default_attributes@Base 3.0.0
- gail_misc_get_extents_from_pango_rectangle@Base 3.0.0
- gail_misc_get_index_at_point_in_layout@Base 3.0.0
- gail_misc_get_origins@Base 3.0.0
- gail_misc_layout_get_run_attributes@Base 3.0.0
- gail_text_util_buffer_setup@Base 3.0.0
- gail_text_util_get_substring@Base 3.0.0
- gail_text_util_get_text@Base 3.0.0
- gail_text_util_get_type@Base 3.0.0
- gail_text_util_new@Base 3.0.0
- gail_text_util_text_setup@Base 3.0.0
