@@ -1,3 +1,0 @@
-usr/include/gail*
-usr/lib/*/libgail*.so
-usr/lib/*/pkgconfig/gail*.pc
