@@ -1,9 +1,0 @@
-Document: gail-reference-4
-Title: Gail Reference Manual
-Author: Padraig O'Briain <padraig.obriain@sun.com>
-Abstract: This manual describes APIs for libgail-util
-Section: Accessibility
-
-Format: HTML
-Index: /usr/share/gtk-doc/html/gail-libgail-util4/index.html
-Files: /usr/share/gtk-doc/html/gail-libgail-util4/*.html
