@@ -1,1 +1,0 @@
-/usr/share/gtk-doc/html/gail-libgail-util4 /usr/share/doc/libgail-4-doc/html
